# im-a-hero

./: .gitignore  MINDMAP.txt  README.md  deploy.ps1  mapa.txt
android_host/: build.gradle.kts  gradle.properties  gradlew.bat  settings.gradle.kts
android_host/src/main/: AndroidManifest.xml
android_host/src/main/assets/: index.html
android_host/src/main/assets/css/: terminal.css
android_host/src/main/assets/js/: core.js
android_host/src/main/java/com/hero/: TelemetryService.kt
android_host/src/main/res/values/: strings.xml
android_host/src/main/res/xml/: accessibility_service_config.xml  accessiibility_service_config.xml
daemon_core/: Cargo.toml
daemon_core/src/: lib.rs
rcon_bridge/: HeroBridge.slnx
terminal_ui/: package.json
terminal_ui/src/: index.html
